--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 h1 {
-    font-family: 'Roboto', 'sans-serif';
+    font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: 700;
 }
@@ -14,8 +14,11 @@ h2,
 h3,
 h4,
 h5,
-p {
-    font-family: 'Roboto';
+p,
+a,
+button,
+.price {
+    font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: 500;
 }
@@ -24,9 +27,9 @@ p {
     margin-left: 3%;
     display: grid;
     max-width: 100vw;
-    min-height: 1500px;
+    /* min-height: 2000px; */
     grid-template-columns: 50% 50%;
-    grid-template-rows: 10% 20% 20% 20% 50%;
+    grid-template-rows: 5% 15% 7% 48% 25%;
     grid-template-areas:
         "hd hd"
         "main main"
@@ -35,15 +38,16 @@ p {
         "ft ft";
 }
 
-body:before {
+header:before {
     content: "";
-    position: fixed;
+    position: absolute;
     background: #B2EBF2;
-    width: 150vw;
-    height: 100vh;
-    z-index: -1;
-    border-radius: 80px;
-    transform: rotate(-10deg);
+    width: 120%;
+    height: 110%;
+    z-index: -2;
+    border-radius: 50px;
+    transform: rotate(-5deg);
+    margin: -7% 0 0 -2%;
 }
 
 header {
@@ -57,13 +61,12 @@ header {
     max-width: 90%;
     justify-content: space-around;
     padding-top: 3%;
-
 }
 
 #logo {
     max-width: 100%;
     grid-area: logo;
-
+    margin-top: -8%;
 }
 
 .menu_left {
@@ -71,6 +74,7 @@ header {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
+    margin-left: 2%;
 }
 
 .menu_right {
@@ -81,10 +85,16 @@ header {
 }
 
 #register {
+    appearance: none;
+    -webkit-appearance: none;
+    padding: 2%;
+    border: none;
     background-color: orange;
-    margin-bottom: 10%;
-    padding: 1%;
-    color: white;
+    text-transform: uppercase;
+    color: #fff;
+    font-weight: 600;
+    border-radius: 5px;
+    max-height: 60%;
 }
 
 #settings {
@@ -142,25 +152,63 @@ main {
 #see_detail {
     background-color: #00BCD4;
     color: white;
-    padding: 1%;
+    appearance: none;
+    -webkit-appearance: none;
+    padding: 2%;
+    border: none;
+    text-transform: uppercase;
+    font-weight: 600;
+    border-radius: 5px;
+    margin-top: -2%;
+}
+
+.benefits {
+    grid-area: bnf;
+    display: grid;
+    grid-template-columns: 30% 30% 30%;
+    width: 80%;
+    margin-left: 10%;
+    justify-content: space-evenly;
+    max-width: 100%;
+}
+
+.benefit1,
+.benefit2 {
+    border-right: 1px solid;
+}
+
+.benefits h2 {
+    margin-bottom: 5%;
 }
 
 section {
     grid-area: mnft;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 15% 15% 40% 15% 15%;
+    grid-template-areas:
+        "mainft mainft"
+        "pop pop"
+        "exp exp"
+        "about about"
+        "tests tests";
+    row-gap: 10%;
     max-width: 100%;
-    min-height: 100%;
 }
 
-.main_feature {
+.section_feature {
+    grid-area: mainft;
     display: flex;
     flex-flow: row wrap;
-    width: 100%;
     justify-content: center;
     text-align: center;
+    margin-bottom: 5%;
+    flex-basis: 100%;
 }
 
 .main_feature h2 {
     width: 100%;
+    margin-bottom: 5%;
 }
 
 .img_main {
@@ -172,9 +220,8 @@ section {
         "i2 i4";
     justify-items: center;
     width: 100%;
-    height: 100%;
     row-gap: 10%;
-    margin-top: 2%;
+    margin-top: 3%;
 }
 
 #i1 {
@@ -226,7 +273,6 @@ section {
     align-items: center;
 }
 
-
 #i3 {
     grid-area: i3;
     display: grid;
@@ -237,7 +283,6 @@ section {
         "img1 t2";
     align-items: center;
 }
-
 
 #i4 {
     grid-area: i4;
@@ -250,25 +295,129 @@ section {
     align-items: center;
 }
 
-
-.benefits {
-    grid-area: bnf;
-    display: grid;
-    grid-template-columns: 30% 30% 30%;
-    width: 80%;
-    margin-left: 10%;
+.popular_course {
+    grid-area: pop;
+    display: flex;
+    flex-flow: row wrap;
     margin-bottom: 5%;
-    justify-content: space-evenly;
-    max-width: 100%;
-    min-height: 100%;
+    flex-basis: 100%;
 }
 
-.benefit1 h3 {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 500;
-    color: #00838F;
+.pop_course {
+    display: flex;
+    flex-flow: row wrap;
+    flex-basis: 100%;
+
 }
+
+.pop_course_h2p {
+    flex: 1 0 80%;
+}
+
+.pop_course_h2p h2 {
+    margin-bottom: 5%;
+}
+
+.pop_course a {
+    flex: 0 1 10%;
+    justify-self: flex-end;
+}
+
+.product-items {
+    display: grid;
+    grid-template-columns: 20% 80%;
+    grid-template-areas: "about_img items";
+    max-width: 90%;
+    background-color: aquamarine;
+}
+
+
+#about_product {
+    grid-area: about_img;
+    display: grid;
+}
+
+.items {
+    grid-area: items;
+    display: grid;
+    box-sizing: border-box;
+}
+
+
+.product-item1,
+.product-item2,
+.product-item3 {
+    text-align: center;
+    margin: 0 auto;
+    border-bottom: 2px solid #00BCD4;
+    background: white;
+    font-family: "Open Sans";
+    transition: .3s ease-in;
+    border-radius: 15px;
+}
+
+.product-item-1:hover,
+.product-item-2:hover,
+.product-item-3:hover {
+    border-bottom: 2px solid #fc9b24;
+}
+
+.product-item1 img,
+.product-item2 img,
+.product-item3 img {
+    display: block;
+    max-width: 90%;
+    border-radius: 15px;
+    margin: 0 auto;
+}
+
+.product-list {
+    padding: 15px 0;
+    border-radius: 5px;
+}
+
+.price {
+    color: black;
+    display: flex;
+    justify-content: flex-end;
+    max-width: 90%;
+}
+
+.button {
+    text-decoration: none;
+    display: flex;
+    max-width: 85%;
+    justify-content: center;
+    background: #00BCD4;
+    color: white;
+    text-transform: uppercase;
+    font-size: 80%;
+    line-height: 28px;
+    transition: .3s ease-in;
+    border-radius: 5px;
+}
+
+.product-item:hover .button {
+    background: #fc9b24;
+}
+
+.explore {
+    grid-area: exp;
+    display: grid;
+    grid-template-columns: repeat(12, 8%);
+    grid-template-rows: 10% repeat(3, 30%);
+    grid-template-areas: ;
+}
+
+.about {
+    grid-area: about;
+}
+
+.testimonials {
+    grid-area: tests;
+}
+
+
 
 footer {
     grid-area: ft;
@@ -284,8 +433,13 @@ footer {
 .subscribe {
     grid-area: sub;
     text-align: center;
-    padding-top: 7%;
     line-height: 300%;
+    max-width: 100%;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    flex-basis: 70%;
 }
 
 .logo_footer {
@@ -322,4 +476,29 @@ footer {
 
 #soc {
     max-width: 100%;
+}
+
+input[type=text] {
+    appearance: none;
+    -webkit-appearance: none;
+    border: none;
+    margin: 10px 20% 0;
+    max-width: 70%;
+}
+
+[type=submit] {
+    appearance: none;
+    -webkit-appearance: none;
+    padding: 1%;
+    border: none;
+    background-color: #00BCD4;
+    color: #fff;
+    font-weight: 600;
+    border-radius: 5px;
+    width: 20%;
+}
+
+.subscribe_form {
+    background-color: white;
+    width: 40%;
 }
